--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,39 @@
 .env.production.local
 
 npm-debug.log*
+
+### yarn ###
 yarn-debug.log*
 yarn-error.log*
+
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+
+!.yarn/cache
+
+
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
+
+### vscode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
